--- a/public/assets/scss/layout/header/nav-header/_nav-control.scss
+++ b/public/assets/scss/layout/header/nav-header/_nav-control.scss
@@ -157,7 +157,7 @@
 }
 
 .hamburger .line {
-    background: $primary;
+    background: "#fffffff";
     display: block;
     height: 3px;
     border-radius: 3px;;
